--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,10 @@
 @import 'compass/reset';
 @import 'compass/css3';
 
-h1.test-heading {
-  color: #333;
-}
+// Import bootstrap
+@import 'vendors/bootstrap4/bootstrap';
+
+// 7-1 pattern
+@import 'base/typography';
+// Version 1
+@import 'themes/v1';
