improvement(homepage, hero-section): hero section styling

--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -16,4 +16,5 @@ $color-okada-dark-1: #cd8634;
 $color-okada-dark-2: #b67c30;
 
 // others
+$navbar-primary-color: #f8d76d;
 $hero-section-right-color: #ce8735;
