improvement(countdown, styling, sass): added font-face mixin & implemented for countdown section

--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -18,3 +18,4 @@ $color-okada-dark-2: #b67c30;
 // others
 $navbar-primary-color: #f8d76d;
 $hero-section-right-color: #ce8735;
+$countdown-color: $color-okada-dark-1;
