style(sass, countdown): typography test

--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -19,3 +19,5 @@ $color-okada-dark-2: #b67c30;
 $navbar-primary-color: #f8d76d;
 $hero-section-right-color: #ce8735;
 $countdown-color: $color-okada-dark-1;
+$hero-heading-color: $color-okada-dark-1;
+$hero-caption-color: #828282;
