--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -5,6 +5,10 @@
     font-family: $font-name;
     font-style: $font-style;
     font-weight: $font-weight;
+    @if $support-required == 'oldie-otf' {
+      src: url('#{$font-path}.otf');
+      src: url('#{$font-path}.otf?#iefix') format('embedded-opentype');
+    }
     @if $support-required == 'oldie' {
       src: url('#{$font-path}.eot');
       src: url('#{$font-path}.eot?#iefix') format('embedded-opentype'), url('#{$font-path}.woff2') format('woff2'),
@@ -18,7 +22,15 @@
       src: url('#{$font-path}.woff2') format('woff2'), url('#{$font-path}.woff') format('woff');
     }
   }
-  @if $support-required != 'oldie' and $support-required != 'recent' and $support-required != 'modern' {
+  @if $support-required !=
+    'oldie-otf' and
+    $support-required !=
+    'oldie' and
+    $support-required !=
+    'recent' and
+    $support-required !=
+    'modern'
+  {
     @error 'Invalid support-required value. Must be "oldie"==>IE8 and above/ Android native browser 4+/ Safari 4.3 OR "recent"==>IE9+/ Android native browser 4.0+/ Safari 4.3+ OR "modern"==>IE9+/ Android native browser 4.4+/ Safari 5.1+';
   }
 }
