improvement(index, responsive, sass): mobile-first styling with assets provided

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,3 +13,5 @@
 // Theming
 @import 'themes/hero-section';
 @import 'themes/countdown-section';
+@import 'themes/cove-manila';
+@import 'themes/others';
