--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,5 +1,5 @@
 // navbar
-$navbar-default-height: 56px;
+$navbar-default-height: 59px;
 
 // md grid
 $hero-row-height-default: 416px;
@@ -7,3 +7,9 @@ $hero-row-height: 62vh;
 
 // padding & margins
 $row-default-padding: 2em 0;
+
+// grid-related
+$guest-container-min-height: 234px;
+
+// the fountain
+$the-fountain-md-height: 363px;
