--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -1,3 +1,6 @@
+// Gothan Book
+@include font-face('Gotham Book', '../fonts/GothamBook');
+
 // Gotham Light
 @include font-face('Gotham Light', '../fonts/GothamLight', normal, normal, 'recent');
 
@@ -9,21 +12,25 @@
 @include font-face('Gotham Bold Italic', '../fonts/GothamBoldItalic', bold, italic, 'recent');
 
 // Gotham Black
-@include font-face('Gotham Black', '../fonts/GothamBlack', bolder, normal, 'oldie-otf');
+@include font-face('Gotham Black', '../fonts/GothamBlack', bolder, normal, 'recent');
+
+// Playfair Display
+@include font-face('Playfair Display', '../fonts/PlayfairDisplayRegular');
 
 .okada-hero {
   margin-top: 34px;
   text-align: center;
+}
 
-  .okada-hero-heading {
-    color: $hero-heading-color;
-    font-family: 'Gotham Bold', sans-serif;
-    font-size: 22px;
-  }
+.okada-hero-heading {
+  color: $hero-heading-color;
+  font-family: 'Gotham Black', sans-serif;
+  font-size: 22px;
+}
 
-  .okada-hero-caption {
-    color: $hero-caption-color;
-    font-family: 'Gotham Medium', sans-serif;
-    font-size: 14px;
-  }
+.okada-hero-caption {
+  color: $hero-caption-color;
+  font-family: 'Gotham Medium', sans-serif;
+  font-size: 14px;
+  text-align: center;
 }
