--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -34,3 +34,32 @@
     @error 'Invalid support-required value. Must be "oldie"==>IE8 and above/ Android native browser 4+/ Safari 4.3 OR "recent"==>IE9+/ Android native browser 4.0+/ Safari 4.3+ OR "modern"==>IE9+/ Android native browser 4.4+/ Safari 5.1+';
   }
 }
+
+// Responsive way of displaying image (using div background)
+@mixin display-bg-image($image-name, $background-position: center top, $background-size: cover) {
+  @include media-breakpoint-up(md) {
+    background-image: url('../images/#{$image-name}@2x.png');
+  }
+  @include media-breakpoint-down(md) {
+    background-image: url('../images/#{$image-name}.png');
+  }
+  background-position: $background-position;
+  background-repeat: no-repeat;
+  background-size: $background-size;
+}
+
+// tentative
+@mixin night-show-container($grid-class-1, $grid-class-2) {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+
+  .#{$grid-class-1} {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  .#{$grid-class-2} {
+    grid-area: 2 / 1 / 3 / 2;
+    grid-column: 1 / span 2;
+  }
+}
