--- a/src/sass/themes/others.scss
+++ b/src/sass/themes/others.scss
@@ -1,7 +1,15 @@
-.container {
+// Other cosmetic changes here
+.main-container {
   .world-class-row,
   .the-company-row {
     background: $hero-gray-bg-color-1;
+  }
+
+  .world-class-row {
+    .image-col {
+      @include display-bg-image('world-class', center, contain);
+      min-height: 13.18625rem;
+    }
   }
 
   .the-company-row {
@@ -14,7 +22,132 @@
     }
   }
 
+  // GUEST LIST
   .guests-row {
     background: $hero-gray-bg-color-2;
+    flex-wrap: wrap;
+    padding: 0 1.1875rem 1.1875rem !important;
+
+    .guest-entry {
+      margin-top: 19px;
+      max-width: 181.35px;
+      padding: 0;
+
+      .guest-info-container {
+        min-height: $guest-container-min-height;
+      }
+    }
+
+    .guest-info-container {
+      .guest-image {
+        min-height: 172px;
+
+        &.bugoy-drilon {
+          @include display-bg-image('bugoy-drilon');
+        }
+
+        &.daryl-ong {
+          @include display-bg-image('daryl-ong');
+        }
+
+        &.michael-pangilinan {
+          @include display-bg-image('michael-pangilinan');
+        }
+
+        &.liezel-garcia {
+          @include display-bg-image('liezel-garcia');
+        }
+
+        &.erik-santos {
+          @include display-bg-image('erik-santos');
+        }
+
+        &.mayonnaise {
+          @include display-bg-image('mayonnaise', center bottom, 340px);
+        }
+
+        &.udd {
+          @include display-bg-image('udd', center right);
+        }
+
+        &.the-ransom-collective {
+          @include display-bg-image('trc');
+        }
+      }
+
+      .guest-info {
+        background: $guest-name-info-bg;
+        padding: 12px;
+      }
+
+      .guest-info .guest-name {
+        color: $color-okada-dark-1;
+        font-family: 'Gotham Black';
+        font-size: 11px;
+      }
+
+      .guest-info .guest-name-info {
+        color: $caption-color;
+        font-family: 'Gotham Medium';
+        font-size: 10px;
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  // THE FOUNTAIN
+  .night-show-row {
+    @include display-bg-image('X5X8Aj', 18% center);
+    max-height: $the-fountain-md-height;
+    min-height: $the-fountain-md-height;
+
+    .night-show-col {
+      @include night-show-container('night-show-logo', 'night-show-details');
+      border: 1px $color-okada-light-1 solid;
+      margin: 19px;
+      // calculation of second argument: (19px x 2 = 28px + 12 = 40px)
+      max-height: calc(#{$the-fountain-md-height} - 40px);
+    }
+  }
+
+  // .night-show-row {
+
+  //   .night-show-col {
+
+  //   }
+  // }
+
+  // THE FOUNTAIN
+  .night-show-col {
+    padding: 19px !important;
+
+    .night-show-logo {
+      @include display-bg-image('the-fountain', right, auto);
+      height: 53.48px;
+    }
+
+    .dazzling {
+      -webkit-text-fill-color: transparent;
+      background: $dazzling-mask-color;
+      background-clip: text;
+      font-family: 'Playfair Display';
+      font-size: 23px;
+    }
+
+    .dazzling-details {
+      color: $white;
+      font-family: 'Gotham Book';
+      font-size: 14px;
+    }
+
+    .btn-dazzling {
+      font-family: 'Gotham Black';
+      font-size: 11px;
+      background-color: transparent;
+      border-color: $color-okada-light-1;
+      border-radius: 0.6625rem;
+      padding-left: 2em;
+      padding-right: 2em;
+    }
   }
 }
