--- a/src/sass/themes/hero-section.scss
+++ b/src/sass/themes/hero-section.scss
@@ -1,4 +1,4 @@
-.container {
+.main-container {
   .hero-row {
     // background-color: $hero-section-right-color;
     background: $hero-section-bg;
