feat(cove-manila): cove manila section initial UI

--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -56,6 +56,7 @@ $hero-section-right-color: #ce8735;
 $countdown-color: $color-okada-dark-1;
 $hero-heading-color: $color-okada-dark-1;
 $hero-caption-color: #828282;
+$hero-caption-color-darker: #575756;
 $hero-gray-bg-color-1: #e8e8e8;
 $hero-gray-bg-color-2: #c2c2c1;
 $caption-color: $hero-caption-color;
