--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'utils/mixins';
 @import 'base/colors';
 @import 'base/typography';
+@import 'components/buttons';
 @import 'components/navbar';
 @import 'components/swiper';
 @import 'layout/grid';
