improvement(index, cove-manila, the-restaurants, grid): cove manila styling (mobile first), etc
Cove Manila styling. Fixes for smaller devices (as the xs breakpoint was already removed on BS 4),
The Fountain padding fixes

--- a/src/sass/layout/grid.scss
+++ b/src/sass/layout/grid.scss
@@ -38,6 +38,11 @@
     }
   }
 
+  // https://stackoverflow.com/a/42980961
+  .row [class*='col-'] {
+    transition: 0.5s ease;
+  }
+
   // Currently testing md
   // If something happenned weird on mobile, will use sm
   // @include media-breakpoint-down(sm) {
