--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,8 @@
 @import 'vendors/fontawesome/font-awesome';
 // Import swiper (sass)
 @import 'vendors/swiper/swiper';
+// Import hover.css
+@import 'vendors/hover.css/scss/hover';
 
 // 7-1 pattern
 @import 'variables';
