improvement(index, navbar, cove-manila, hero-section): added footer, UI adjustments & nav link test

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'base/colors';
 @import 'base/typography';
 @import 'components/buttons';
+@import 'components/footer';
 @import 'components/navbar';
 @import 'components/swiper';
 @import 'layout/grid';
