improvement(index, mobile, cove-manila, footer): needed adjustments for mobile

--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -60,3 +60,7 @@ $hero-caption-color-darker: #575756;
 $hero-gray-bg-color-1: #e8e8e8;
 $hero-gray-bg-color-2: #c2c2c1;
 $caption-color: $hero-caption-color;
+$footer-text-color: $hero-gray-bg-color-2;
+
+// IDK about the terms of it
+$common-shining-mask-bg: $dazzling-mask-color;
