--- a/src/sass/themes/cove-manila.scss
+++ b/src/sass/themes/cove-manila.scss
@@ -37,8 +37,7 @@
   .cove-manila-row-2 {
     @include display-bg-image('5EsOJA');
     min-height: 517px;
-    // TODO: Tentative
-    // padding-top: 191.5px;
+    padding-top: 9em;
 
     .featured-dj-below {
       align-items: flex-end;
