--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -13,6 +13,7 @@ $row-default-padding: 2em 0;
 
 // grid-related
 $guest-container-min-height: 234px;
+$guest-container-min-height-md: 427px;
 
 // the fountain
 $the-fountain-md-height: 363px;
