--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -30,3 +30,9 @@
   font-size: 14px;
   // text-align: center;
 }
+
+@include media-breakpoint-up(md) {
+  .okada-hero-heading {
+    font-size: 2.5rem;
+  }
+}
