--- a/src/sass/layout/grid.scss
+++ b/src/sass/layout/grid.scss
@@ -28,9 +28,9 @@
     .the-company-row {
       padding-bottom: 0;
 
-      .image-col {
-        margin-bottom: 31px;
-      }
+      // .image-col {
+      //   margin-bottom: 31px;
+      // }
     }
 
     .image {
@@ -53,10 +53,34 @@
 }
 
 // Tablets below
-// @include media-breakpoint-down(md) {
-//   // Main container
-//   .main-container,
-//   .container {
-//     max-width: unset;
-//   }
-// }
+@include media-breakpoint-up(md) {
+  // Main container
+  .main-container,
+  .container {
+    margin-top: -#{$navbar-md-height};
+
+    .hero-row {
+      padding-top: calc(#{$navbar-md-height} + 15px);
+    }
+
+    .countdown-row {
+      padding: 3rem 0;
+    }
+
+    .world-class-row {
+      height: 580px;
+      padding: 65px 0;
+
+      .heading-col {
+        align-self: center;
+      }
+
+      .image-col {
+        background-position: right center !important;
+      }
+    }
+
+    // .the-company-row {
+    // }
+  }
+}
